db/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: db
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
 
  ingress:
  - from:
    - namespaceSelector:
       matchLabels:
        project: default
      podSelector:
        matchLabels:
          app: python-log
    ports:
    - protocol: TCP
      port: 6379
