db/policy_gitea.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-gitea-to-sql
  namespace: db
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
       matchLabels:
        project: default
      podSelector:
        matchLabels:
          app: gitea
    ports:
    - protocol: TCP
      port: 3306
